static/styles.css
body {
    font-family: Arial, sans-serif;
    margin: 20px;
    background-color: #dedcdc;
    color: #404040;
}
.container {
    max-width: 1200px;
    margin: 0 auto;
}
.upload-section {
    margin-bottom: 20px;
    padding: 20px;
    border: 2px dashed #666;
    border-radius: 5px;
    text-align: center;
}
#visualization {
    margin-top: 20px;
    position: relative;
    overflow: auto;
    z-index: 2;
}

#visualization-wrapper {
    position: relative;
    margin-top: 20px;
    min-height: 100px;
}

.node {
    cursor: move;
}
.node circle {
    fill: #555;
    stroke: #fff;
    stroke-width: 1.5px;
}
.node text {
    font: 12px sans-serif;
    fill: #fff;
    pointer-events: none; /* Prevents text from interfering with drag */
}
.link {
    fill: none;
    stroke: #555;
    stroke-width: 1.5px;
}

.yellow-box {
    background-color: rgba(255, 255, 0, 0.2);
    padding: 2px 4px;
    border-radius: 3px;
    position: relative;

    background-color: yellow;
    color: #555555;
    display: inline-block;
    padding: 5px;
    margin: 2px;
    z-index: 2;
}

.blue-box {
    background-color: rgba(68, 68, 255, 0.2);
    padding: 2px 4px;
    border-radius: 3px;
    position: relative;

    color: #1e1e1e;
    display: inline-block;
    margin: 2px;
    cursor: pointer;
    z-index: 2;
}

.card {
    border: 1px solid #ccc;
    padding: 10px;
    margin: 5px;
}

.tooltip {
    position: absolute;
    padding: 8px;
    background: rgba(0, 0, 0, 0.8); /* or change to #fff depending on your design */
    border-radius: 4px;
    pointer-events: none;
    color: white;
    font-size: 18px;
    display: none; /* Ensure the tooltip is hidden initially */
    z-index: 9999; /* Ensure it's displayed above other elements */
    border: 1px solid #ccc; /* Add border if needed */
}

.sentences-container {
    display: flex;
    flex-direction: column;
}

.sentence {
    width: 100%;
    position: relative;
    margin-bottom: 20px;
    padding: 5px;
    background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
    /*z-index: 2;*/
}

.arrows {
    position: absolute !important;
    top: 0 !important;
    left: 0 !important;
    width: 100% !important;
    height: 100% !important;
    pointer-events: none;
    z-index: 1;
}

